# jepgo-engine

./: .gitignore  CMakeLists.txt  CMakeLists_tmp.txt  Makefile  README.md  build.sh  external.client.cpp  external.server.cpp  linux.sh  project_name  windows.bat
.github/workflows/: mirror.yml  workflow.yml
Ray/: Raylib.cpp
cmake/: dependencies.cmake
components/: Components.hpp  Stamina.hpp
docs/: HOWTO.md  HOWTOCREATEGAME.md  Whack-A-Mole-Game-Development-Guide.md  implement-graphical.md
engine/: CMakeLists.txt  Makefile  engine.hpp
engine/include/: AddDmgSystem.hpp  AllSystem.hpp  AnimLine.hpp  Animation2TimeSystem.hpp  AnimationSpriteSystem.hpp  AttachModuleSystem.hpp  AutoShoot.hpp  AutoShootSystem.hpp  BombGenerationSystem.hpp  BombGenerationTimeSystem.hpp  Button.hpp  Clock.hpp  Components.hpp  DeathSystem.hpp  DestroyerSystem.hpp  DetachModulesSystem.hpp  DmgSystem.hpp  Draw3DSystem.hpp  DrawKmSystem.hpp  DrawLvlSystem.hpp  DrawPointsSystem.hpp  DrawRebornSystem.hpp  DrawSystem.hpp  Enemy.hpp  ExplosionSystem.hpp  Game.hpp  GameLvlSystem.hpp  GameSystem.hpp  HitSystem.hpp  InvinsibleSystem.hpp  LogIcon.hpp  LoopMoveSystem.hpp  MainGame.hpp  Menu.hpp  MessageSystem.hpp  MessageTimeSystem.hpp  Module.hpp  ModuleSystem.hpp  MoveSystem.hpp  MoveTo.hpp  (+17 more)
engine/src/: Animation2TimeSystem.cpp  AnimationSpriteSystem.cpp  AutoShoot.cpp  AutoShootSystem.cpp  BombGenerationSystem.cpp  BombGenerationTimeSystem.cpp  Components.cpp  Controllable.cpp  DeathSystem.cpp  DestroyerSystem.cpp  DetachModulesSystem.cpp  Draw3DSystem.cpp  DrawSystem.cpp  Enemy.cpp  ExplosionSystem.cpp  Game.cpp  GameLvlSystem.cpp  GameSystem.cpp  HitSystem.cpp  LogIcon.cpp  LoopMoveSystem.cpp  MainGame.cpp  Menu.cpp  Module.cpp  MoveSystem.cpp  MoveTo.cpp  MoveToPlayerSystem.cpp  MoveToPlayerTimeSystem.cpp  MoveToSystem.cpp  Raylib.cpp  Register.cpp  Rotation3DSystem.cpp  Shoot.cpp  ShortAnimationSystem.cpp  SoloMoveSystem.cpp  TestGame.cpp  Text.cpp  TextDrawable.cpp  main.cpp
include/: Components.hpp  DrawSystem.hpp  HitSystem.hpp  Module.hpp  MoveSystem.hpp  Register.hpp  SoloMoveSystem.hpp  SparseArray.hpp  TestGame.hpp
include/jepengine/: Client.hpp  Game.hpp  Register.hpp  Server.hpp  SparseArray.hpp  exceptions.hpp  types.hpp
include/jeplua/: ILua.hpp  Lua.hpp
include/jepmod/: CBuf.hpp  Clock++.hpp  DLLoader.hpp  EasyLife.hpp  Float++.hpp  Random.hpp  SizedQueue.hpp  utils.hpp
jepgame/: CMakeLists.txt  Makefile
jepgame/gamemaker/: Client.cpp  Client.hpp  Server.cpp  Server.hpp  hardcoded.cpp  hardcoded.hpp
jepgame/service/: Asio.hpp  Builder.cpp  Builder.hpp  Components.hpp  Connections.cpp  Connections.hpp  Engine.hpp  OpCodes.hpp  UDP.cpp  UDP.hpp  UDPBase.hpp
jepgame/toolbox/: CBuf.hpp  Clock++.hpp  EasyLife.hpp  Either.hpp  Execute.hpp  Int++.hpp  SizedQueue.hpp  Vec++.hpp
jepgo/: jepgo
jepgo/.jepgo/project/: CMakeLists.txt  Makefile
jepgo/.jepgo/project/components/: PersoCompo.hpp
jepgo/caca/: game.client.cpp
jepmod/: CMakeLists.txt  DLLoader.cpp  DLLoader.hpp  Jepmodule.cpp  Jepmodule.hpp  Makefile  README.md  basic.jmd  exported.hpp  main.cpp  module.cpp
jepmod/openInclude/: test.hpp
jepmod/openInclude/include/: OpenInclude.hpp  Tmp.hpp
jepmod/openinclude/: .gitignore  Makefile  test.hpp
jepmod/openinclude/include/: OpenInclude.hpp
jepmod/openinclude/src/: FileBuilder.cpp  OpenInclude.cpp  main.cpp
openInclude/: Makefile
sample/: Makefile  client  game.client.cpp  game.server.cpp
samples/cli/: CMakeLists.txt  game.client.cpp  game.server.cpp
samples/isaacNetwork/: CMakeLists.txt  Direction.hpp  Display.cpp  Movement.cpp  game.client.cpp  game.server.cpp
samples/rtype/: CMakeLists.txt  components.hpp  game.client.cpp  game.server.cpp  sysAndComps.cpp  vlg.1.txt  vlg.2.txt  vlg.3.txt
samples/rtype/TCP/: Makefile  ServerClient.md  exemple.cfg
samples/rtype/TCP/Database/: jepgo.db  jepgo.sql
samples/rtype/TCP/include/: Acceptor.hpp  IAcceptor.hpp  IClientTCP.hpp  IServerTCP.hpp  ISocket.hpp  LibGraph.hpp  Lobby.hpp  ParsingFile.hpp  Raylib.hpp  Socket.hpp  clientTCP.hpp  serverLogic.hpp  serverTCP.hpp
samples/rtype/TCP/src/: ParsingFile.cpp  clientLogic.cpp  clientTCP.cpp  serverTCP.cpp
samples/rtype/include/: AnimLine.hpp  Button.hpp  Clock.hpp  LogIcon.hpp  Menu.hpp  RaylibPlus.hpp
samples/rtype/src/: AnimLine.cpp  Button.cpp  Level1.cpp  LogIcon.cpp  Menu.cpp  RaylibPlus.cpp  main.cpp
samples/systemPriority/: CMakeLists.txt  game.client.cpp  systemA.cpp  systemB.cpp  systemC.cpp
sprites/: AnyConv.com__BackGroung.ogg:Zone.Identifier  explose.wav:Zone.Identifier  laser.wav:Zone.Identifier
src/: CMakeLists.txt  Components.cpp  Controllable.cpp  DrawSystem.cpp  HitSystem.cpp  Module.cpp  MoveSystem.cpp  Register.cpp  TestGame.cpp  main.cpp
src/jep3rdparty/lua/: CMakeLists.txt  loslib.c
src/jepcli/: CMakeLists.txt  main.cpp
src/jepcli/helper/: CMakeLists.txt  game.client.cpp  game.server.cpp
src/jepengine/: CMakeLists.txt  Game.cpp  LuaHelper.cpp  Network.cpp  Register.cpp
src/jepmain/: client.cpp
src/jepmaker/graphic/: CMakeLists.txt  Raylib.cpp
src/jepmaker/levels/: CMakeLists.txt
src/jepmaker/network/: Asio.cpp  CMakeLists.txt  CSockets.cpp
src/jepmaker/network/deprecated/: CSockets.cpp
src/jepmaker/services/: CMakeLists.txt
src/jepmaker/systems/: Animation2TimeSystem.cpp  AnimationSpriteSystem.cpp  AttachModuleSystem.cpp  AutoShootSystem.cpp  BombGenerationSystem.cpp  BombGenerationTimeSystem.cpp  CMakeLists.txt  DeathSystem.cpp  DestroyerSystem.cpp  DmgSystem.cpp  DoDmgSystem.cpp  Draw2DSystem.cpp  DrawKmSystem.cpp  DrawLvlSystem.cpp  DrawPointsSystem.cpp  DrawRebornSystem.cpp  ExplosionSystem.cpp  FreeSystem.cpp  GameLogic.cpp  GameLvlSystem.cpp  GameSystem.cpp  HitSystem.cpp  InvincibleSystem.cpp  InvincibleTimeSystem.cpp  KeySystem.cpp  MessageSystem.cpp  ModuleSystem.cpp  MoveSystem.cpp  MoveToPlayerSystem.cpp  MoveToPlayerTimeSystem.cpp  MoveToSystem.cpp  MyFree.cpp  Poison.cpp  RebornSystem.cpp  Sprite2DMultiAnimSystem.cpp
src/jepmod/: CMakeLists.txt  DLLoader.cpp
whack-a-mole/: Makefile
(+123 files in other folders)
